# xsect

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.md  pytest.ini  requirements.txt  setup.cfg
docs/: Makefile  calc.rst  data.rst  index.rst  make.bat
docs/_templates/autosummary/: class.rst
docs/releases/: v1.1.0.rst
examples/: angle_ex1.py  boundary_ex1.py  cruciform_ex1.py  double_angle_ex1.py  i_beam_ex1.py  multi_section_ex1.py  polygon_ex1.py  round_ex1.py  t_beam_ex1.py
xsect/: __init__.py
xsect/calc/: __init__.py  _plt.py  angle.py  angle_test.py  boundary.py  boundary_test.py  cross_section.py  cross_section_test.py  cruciform.py  cruciform_test.py  double_angle.py  double_angle_test.py  i_beam.py  i_beam_test.py  multi.py  multi_test.py  polygon.py  polygon_test.py  round.py  round_test.py  t_beam.py  t_beam_test.py
xsect/config/: _matplotlib.py
xsect/data/: __init__.py  _make_db.py  aisc-shapes-database-v15.0.xlsx  config_db.py  query_db.py  query_db_test.py  xsect.sqlite
