[bdist_wheel]
universal = 1

[metadata]
project = XSect
name = xsect
version = 0.0.1
author = Matt Pewsey
copyright = 2019, Matt Pewsey
description = Contains tools for calculating structural member cross sectional properties and databases of standard cross sectional properties.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/mpewsey/xsect
keywords =
  civil-engineering
classifiers =
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Operating System :: OS Independent
  License :: OSI Approved :: BSD License

[options]
packages = find:
include_package_data = True
install_requires =
  numpy>=1.14.5
  pandas>=0.23.0
  matplotlib>=2.2.2
python_requires = >=3.5

[options.extras_require]
test =
  pytest>=3.5.1
  pytest-cov>=2.5.1
  codecov>=2.0.15
docs =
  docutils==0.14
  numpydoc>=0.8.0
